@@ -18,6 +18,11 @@ along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
 the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 MA 02111-1307, USA.
 
+2003-09-26  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/powerpc64/addlsh1_n.asm: New file.
+	* mpn/powerpc64/sublsh1_n.asm: New file.
+
 2003-09-25  Torbjorn Granlund  <tege@swox.com>
 
 	* tune/common.c (speed_mpn_addlsh1_n, speed_mpn_sublsh1_n,
